implementations/rust/ockam/ockam/tests/node_test/fail_if_item_is_not_a_function.stderr
error: expected `fn`
 --> tests/node_test/fail_if_item_is_not_a_function.rs:2:1
  |
2 | struct A {}
  | ^^^^^^
