implementations/rust/ockam/ockam/tests/node_test/fail_if_item_is_not_a_function.rs
#[ockam::test]
struct A {}

fn main() {}
